--- a/Refactor.html
+++ b/Refactor.html
@@ -12,9 +12,9 @@
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
-                <li><a href="#search-engine-optimization">Search Engine Optimization</a> </li>
-                <li> <a href="#online-reputation-management">Online Reputation Management</a></li>
-                <li> <a href="#social-media-marketing">Social Media Marketing</a></li>
+                <li><a href="#SearchEngineOptimatization">Search Engine Optimization</a> </li>
+                <li> <a href="#OnlineReputationManagement">Online Reputation Management</a></li>
+                <li> <a href="#SocialMediaMarketing">Social Media Marketing</a></li>
             </ul>
         </div>
     </header>
@@ -24,19 +24,19 @@
     <div class="content">
         <div class="sub-title">
          <img class="float-left" src="./assets/images/search-engine-optimization.jpg"  alt="Search Engine Optimization"/> 
-            <h2>Search Engine Optimization</h2>
+            <h2 id="SearchEngineOptimatization">Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
             </div>
             <div class="sub-title">  
             <img class="float-right" src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management"  />
-            <h2>Online Reputation Management</h2>
+            <h2 id="OnlineReputationManagement">Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p> 
             </div>   
              <div class="sub-title">
             <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="social media marketing" />
-            <h2>Social Media Marketing</h2>
+            <h2 id="SocialMediaMarketing">Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
