--- a/Refactor.html
+++ b/Refactor.html
@@ -10,16 +10,16 @@
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li><a href="#SearchEngineOptimatization">Search Engine Optimization</a> </li>
                 <li> <a href="#OnlineReputationManagement">Online Reputation Management</a></li>
                 <li> <a href="#SocialMediaMarketing">Social Media Marketing</a></li>
             </ul>
-        </div>
+        </nav>
     </header>
 
-    <div class="hero"></div>
+    <section class="hero"></section>
     
     <div class="content">
         <div class="sub-title">
