--- a/Refactor.html
+++ b/Refactor.html
@@ -21,29 +21,30 @@
 
     <section class="hero"></section>
     
-    <div class="content">
-        <div class="sub-title">
+    <main>
+        <section class="sub-title">
          <img class="float-left" src="./assets/images/search-engine-optimization.jpg"  alt="image referring to search-engine-optimization section"/> 
             <h2 id="SearchEngineOptimatization">Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
-            </div>
-            <div class="sub-title">  
+        </section>
+            <section class="sub-title">  
             <img class="float-right" src="./assets/images/online-reputation-management.jpg" alt="Image referring to online-reputation-management section"  />
             <h2 id="OnlineReputationManagement">Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p> 
-            </div>   
-             <div class="sub-title">
+        </section>   
+
+             <section class="sub-title">
             <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt=" image referring to social-media-marketing section" />
             <h2 id="SocialMediaMarketing">Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-            </div>
-    </div>
+        </section>
+        </main>
 
-    <div class="benefits">
+    <aside class="benefits">
        <div class="benefit-titles"> 
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation" />
@@ -66,7 +67,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </aside>
     <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
